--- a/docs/404.md
+++ b/docs/404.md
@@ -5,4 +5,6 @@ permalink: /404.html
 ok so i think you did something wrong
 
 1. The page you tried accessing doesn't exist
-2. idfk i'm not a debugger terminal
+2. idk I'm not a debugger terminal I'll figure something out
+
+Just report this using an Issue Template I guess
