--- a/docs/404.md
+++ b/docs/404.md
@@ -8,3 +8,5 @@ ok so i think you did something wrong
 2. idk I'm not a debugger terminal I'll figure something out
 
 Just report this using an Issue Template I guess
+
+If you clicked the blue text meant to redirect you to the homepage, then add "home.html" to the end of the address
